Landing page responsive done. Needs content change

--- a/wp-content/themes/stageworks2/sass/_reset.scss
+++ b/wp-content/themes/stageworks2/sass/_reset.scss
@@ -24,7 +24,10 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 html {
   color: white;
-  font-size: 1em;
+  font-size: $base-font-size;
+  @media #{$query-small} {
+    font-size: $base-font-size-small;
+  }
 }
 body {
   padding: 0;
