--- a/wp-content/themes/stageworks2/sass/_home.scss
+++ b/wp-content/themes/stageworks2/sass/_home.scss
@@ -86,13 +86,6 @@ body.home {
   position: relative;
 
   span.chrome1 {
-    position: absolute;
-    display: block;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 5;
 
     b {
       position: absolute;
@@ -102,6 +95,7 @@ body.home {
       width: 11px;
       height: 11px;
       background: url(images/fbgallerycorners.png);
+      z-index: 5;
     }
     b + b {
       left: auto;
@@ -128,19 +122,31 @@ body.home {
   max-width: 925px;
   padding: 0;
   margin: 0;
-  padding-bottom: 52%;
   position: relative;
   list-style: none;
-  overflow: hidden;
   width: 100%;
+  height: 0;
+  padding-bottom: 52%;
 
   li {
     -webkit-backface-visibility: hidden;
     position: absolute;
+    overflow: hidden;
     display: none;
     width: 100%;
     left: 0;
     top: 0;
+    height: 0;
+    padding-bottom: 52%;
+
+    .title {
+      position: absolute;
+      bottom: 5%;
+      right: 3%;
+      left: 3%;
+      font-size: 110%;
+      text-align: right;
+    }
   }
   
   li:first-child {
@@ -152,6 +158,65 @@ body.home {
     display: block;
     height: auto;
     border: 0;
+  }
+}
+
+#services {
+  font-size: 0;
+  margin: 2% -6% 0;
+
+  .album {
+    text-align: center;
+    width: 25%;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    border: none;
+    font-size: $base-font-size;
+
+    @media #{$query-small} {
+      font-size: $base-font-size-small;
+    }
+  }
+  .albumtitle {
+    font-size: 112.5%;
+    padding: 0;
+  }
+  .albumcontent {
+    padding: 6% 5% 5%;
+    overflow: hidden;
+    position: relative;
+
+    a {
+      background-repeat: no-repeat;
+      @include background-size(cover);
+      display: block;
+      height: 0;
+      padding-bottom: 70%;
+
+      @include transition-property(box-shadow);
+      @include transition-duration(.2s);
+      @include border-radius(10px);
+      @include box-shadow(
+        rgba($glowColour1, 0.1) 0 0 25px,
+        rgba($glowColour1, 0.1) 0 0 25px
+      );
+
+      &:hover {
+        @include box-shadow(
+          rgba($glowColour1, 0.4) 0 0 25px,
+          rgba($glowColour1, 0.4) 0 0 25px
+        );
+      }
+    }
+    img {
+      display: block;
+      @include border-radius(10px);
+      margin: 0;
+      padding: 0;
+      border: none;
+      width: 100%;
+    }
   }
 }
 
