--- a/wp-content/themes/stageworks2/sass/style.scss
+++ b/wp-content/themes/stageworks2/sass/style.scss
@@ -29,6 +29,10 @@ $glowColour1: #fff;
 $glowColour2: #fff;
 $linkColour: #fff;
 
+$base-font-size: 16px;
+$base-font-size-small: 12px;
+
+
 @import "_reset";
 @import "_animations";
 
@@ -38,6 +42,9 @@ $linkColour: #fff;
 ----------------------------------------------- */
 
 
+html {
+  background: black;
+}
 body {
   padding: 0;
   font-family: 'Allerta Stencil', sans-serif;
@@ -56,6 +63,7 @@ body {
   width: auto;
   max-width: 925px;
 }
+
 a {
   color: $linkColour;
   text-decoration: none;
@@ -70,6 +78,8 @@ a {
     rgba(black, 1) 0px 2px 0
   );
 }
+@include linkGlowStyle(white, black);
+
 header {
   position: relative;
   text-align: center;
@@ -94,8 +104,7 @@ header {
         @include animation(LOGOFASTTHROB, 1s, ease-out, 0, infinite);
       }
       span {
-        display: none;
-        position: relative;
+        position: absolute;
         left: -999em;
       }
     }
@@ -114,6 +123,29 @@ header {
         display: block;
         right: 19%;
         top: 18%;
+      }
+    }
+  }
+}
+
+.featured-posts {
+  display: none;
+}
+
+footer {
+  padding-bottom: 3%;
+
+  ul {
+    text-align: center;
+    li {
+      display: inline-block;
+      border-left: 1px solid #fff;
+      margin: 0;
+      padding: 0 1%;
+      font-size: 85%;
+
+      &:first-child {
+        border-left: none;
       }
     }
   }
