--- a/wp-content/themes/stageworks2/style.css
+++ b/wp-content/themes/stageworks2/style.css
@@ -41,51 +41,57 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 /* line 25, sass/_reset.scss */
 html {
   color: white;
-  font-size: 1em;
+  font-size: 16px;
+}
+@media only screen and (max-width: 640px) {
+  /* line 25, sass/_reset.scss */
+  html {
+    font-size: 12px;
+  }
 }
 
-/* line 29, sass/_reset.scss */
+/* line 32, sass/_reset.scss */
 body {
   padding: 0;
   margin: 0;
   line-height: 1;
 }
 
-/* line 34, sass/_reset.scss */
+/* line 37, sass/_reset.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 37, sass/_reset.scss */
+/* line 40, sass/_reset.scss */
 table {
   /* tables still need 'cellspacing="0"' in the markup */
   border-collapse: separate;
   border-spacing: 0;
 }
 
-/* line 41, sass/_reset.scss */
+/* line 44, sass/_reset.scss */
 caption, th, td {
   font-weight: normal;
   text-align: left;
 }
 
-/* line 46, sass/_reset.scss */
+/* line 49, sass/_reset.scss */
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: "";
 }
 
-/* line 49, sass/_reset.scss */
+/* line 52, sass/_reset.scss */
 blockquote, q {
   quotes: "" "";
 }
 
-/* line 52, sass/_reset.scss */
+/* line 55, sass/_reset.scss */
 a img {
   border: 0;
 }
 
-/* line 56, sass/_reset.scss */
+/* line 59, sass/_reset.scss */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -246,24 +252,29 @@ footer, header, hgroup, menu, nav, section {
 
 /* =Structure
 ----------------------------------------------- */
-/* line 41, sass/style.scss */
+/* line 45, sass/style.scss */
+html {
+  background: black;
+}
+
+/* line 48, sass/style.scss */
 body {
   padding: 0;
   font-family: 'Allerta Stencil', sans-serif;
 }
 
 @media only screen and (min-width: 640px) {
-  /* line 46, sass/style.scss */
+  /* line 53, sass/style.scss */
   html {
     background: black url(images/backgrounds/steelplate2.jpg) repeat-x;
   }
 
-  /* line 49, sass/style.scss */
+  /* line 56, sass/style.scss */
   body {
     padding: 0 2em;
   }
 }
-/* line 53, sass/style.scss */
+/* line 60, sass/style.scss */
 #page {
   position: relative;
   margin: 0 auto;
@@ -271,21 +282,43 @@ body {
   max-width: 925px;
 }
 
-/* line 59, sass/style.scss */
+/* line 67, sass/style.scss */
 a {
   color: white;
   text-decoration: none;
   text-shadow: black -2px -2px 0, black 2px -2px 0, black 2px 2px 0, black -2px 2px 0, black -2px 0px 0, black 2px 0px 0, black 0px 2px 0, black 0px 2px 0;
 }
 
-/* line 73, sass/style.scss */
+/* line 2, sass/_mixins.scss */
+a {
+  -webkit-transition-property: color;
+  -moz-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  color: white;
+  text-shadow: black -2px -2px 0, black 2px -2px 0, black 2px 2px 0, black -2px 2px 0;
+}
+
+/* line 14, sass/_mixins.scss */
+a:active,
+a:hover {
+  color: black;
+  text-shadow: white -1px -1px 4px, white 1px -1px 4px, white 1px 1px 4px, white -1px 1px 4px;
+  text-decoration: none;
+}
+
+/* line 83, sass/style.scss */
 header {
   position: relative;
   text-align: center;
   height: 0;
   padding-bottom: 12%;
 }
-/* line 79, sass/style.scss */
+/* line 89, sass/style.scss */
 header h1 {
   position: absolute;
   left: 39%;
@@ -293,7 +326,7 @@ header h1 {
   bottom: 0.35em;
   font-size: 225%;
 }
-/* line 86, sass/style.scss */
+/* line 96, sass/style.scss */
 header h1 a {
   display: block;
   padding-bottom: 22%;
@@ -304,7 +337,7 @@ header h1 a {
   -o-background-size: 100%;
   background-size: 100%;
 }
-/* line 93, sass/style.scss */
+/* line 103, sass/style.scss */
 header h1 a:hover {
   animation: LOGOFASTTHROB 1s ease-out 0 infinite normal;
   -webkit-animation: LOGOFASTTHROB 1s ease-out 0 infinite normal;
@@ -317,27 +350,52 @@ header h1 a:hover {
   -moz-animation-iteration-count: infinite;
   -moz-animation-direction: normal;
 }
-/* line 96, sass/style.scss */
+/* line 106, sass/style.scss */
 header h1 a span {
-  display: none;
-  position: relative;
+  position: absolute;
   left: -999em;
 }
-/* line 105, sass/style.scss */
+/* line 114, sass/style.scss */
 header nav h3 {
   display: none;
 }
-/* line 108, sass/style.scss */
+/* line 117, sass/style.scss */
 header nav li {
   position: absolute;
   display: none;
   font-size: 112%;
 }
-/* line 113, sass/style.scss */
+/* line 122, sass/style.scss */
 header nav li:first-child {
   display: block;
   right: 19%;
   top: 18%;
+}
+
+/* line 131, sass/style.scss */
+.featured-posts {
+  display: none;
+}
+
+/* line 135, sass/style.scss */
+footer {
+  padding-bottom: 3%;
+}
+/* line 138, sass/style.scss */
+footer ul {
+  text-align: center;
+}
+/* line 140, sass/style.scss */
+footer ul li {
+  display: inline-block;
+  border-left: 1px solid #fff;
+  margin: 0;
+  padding: 0 1%;
+  font-size: 85%;
+}
+/* line 147, sass/style.scss */
+footer ul li:first-child {
+  border-left: none;
 }
 
 /* line 2, sass/_home.scss */
@@ -460,17 +518,7 @@ body.home #main {
 #fbgalleries-carrousel {
   position: relative;
 }
-/* line 88, sass/_home.scss */
-#fbgalleries-carrousel span.chrome1 {
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 5;
-}
-/* line 97, sass/_home.scss */
+/* line 90, sass/_home.scss */
 #fbgalleries-carrousel span.chrome1 b {
   position: absolute;
   display: block;
@@ -479,14 +527,15 @@ body.home #main {
   width: 11px;
   height: 11px;
   background: url(images/fbgallerycorners.png);
+  z-index: 5;
 }
-/* line 106, sass/_home.scss */
+/* line 100, sass/_home.scss */
 #fbgalleries-carrousel span.chrome1 b + b {
   left: auto;
   right: 0;
   background-position: top right;
 }
-/* line 111, sass/_home.scss */
+/* line 105, sass/_home.scss */
 #fbgalleries-carrousel span.chrome1 b + b + b {
   width: 10px;
   height: 10px;
@@ -494,41 +543,132 @@ body.home #main {
   bottom: 0;
   background-position: bottom right;
 }
-/* line 118, sass/_home.scss */
+/* line 112, sass/_home.scss */
 #fbgalleries-carrousel span.chrome1 b + b + b + b {
   right: auto;
   left: 0;
   background-position: bottom left;
 }
 
-/* line 127, sass/_home.scss */
+/* line 121, sass/_home.scss */
 .rslides {
   max-width: 925px;
   padding: 0;
   margin: 0;
-  padding-bottom: 52%;
   position: relative;
   list-style: none;
-  overflow: hidden;
   width: 100%;
+  height: 0;
+  padding-bottom: 52%;
 }
-/* line 137, sass/_home.scss */
+/* line 131, sass/_home.scss */
 .rslides li {
   -webkit-backface-visibility: hidden;
   position: absolute;
+  overflow: hidden;
   display: none;
   width: 100%;
   left: 0;
   top: 0;
+  height: 0;
+  padding-bottom: 52%;
 }
-/* line 146, sass/_home.scss */
+/* line 142, sass/_home.scss */
+.rslides li .title {
+  position: absolute;
+  bottom: 5%;
+  right: 3%;
+  left: 3%;
+  font-size: 110%;
+  text-align: right;
+}
+/* line 152, sass/_home.scss */
 .rslides li:first-child {
   display: block;
   float: left;
 }
-/* line 151, sass/_home.scss */
+/* line 157, sass/_home.scss */
 .rslides img {
   display: block;
   height: auto;
   border: 0;
+}
+
+/* line 164, sass/_home.scss */
+#services {
+  font-size: 0;
+  margin: 2% -6% 0;
+}
+/* line 168, sass/_home.scss */
+#services .album {
+  text-align: center;
+  width: 25%;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  border: none;
+  font-size: 16px;
+}
+@media only screen and (max-width: 640px) {
+  /* line 168, sass/_home.scss */
+  #services .album {
+    font-size: 12px;
+  }
+}
+/* line 181, sass/_home.scss */
+#services .albumtitle {
+  font-size: 112.5%;
+  padding: 0;
+}
+/* line 185, sass/_home.scss */
+#services .albumcontent {
+  padding: 6% 5% 5%;
+  overflow: hidden;
+  position: relative;
+}
+/* line 190, sass/_home.scss */
+#services .albumcontent a {
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: block;
+  height: 0;
+  padding-bottom: 70%;
+  -webkit-transition-property: box-shadow;
+  -moz-transition-property: box-shadow;
+  -o-transition-property: box-shadow;
+  transition-property: box-shadow;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.1) 0 0 25px, rgba(255, 255, 255, 0.1) 0 0 25px;
+  -moz-box-shadow: rgba(255, 255, 255, 0.1) 0 0 25px, rgba(255, 255, 255, 0.1) 0 0 25px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0 0 25px, rgba(255, 255, 255, 0.1) 0 0 25px;
+}
+/* line 205, sass/_home.scss */
+#services .albumcontent a:hover {
+  -webkit-box-shadow: rgba(255, 255, 255, 0.4) 0 0 25px, rgba(255, 255, 255, 0.4) 0 0 25px;
+  -moz-box-shadow: rgba(255, 255, 255, 0.4) 0 0 25px, rgba(255, 255, 255, 0.4) 0 0 25px;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 0 25px, rgba(255, 255, 255, 0.4) 0 0 25px;
+}
+/* line 212, sass/_home.scss */
+#services .albumcontent img {
+  display: block;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  width: 100%;
 }
