--- a/wp-content/themes/stageworks2/sass/_mixins.scss
+++ b/wp-content/themes/stageworks2/sass/_mixins.scss
@@ -23,6 +23,29 @@
   }
 }
 
+@mixin boxLinkGlowStyle ($colour1, $colour2) {
+  a {
+    @include transition-property(box-shadow);
+    @include transition-duration(.2s);
+    @include box-shadow(
+      rgba($colour2, 1) 0 0 0,
+      rgba($colour2, 1) 0 0 0,
+      rgba($colour2, 1) 0 0 0,
+      rgba($colour2, 1) 0 0 0
+    );
+  }
+  a:active,
+  a:hover {
+    @include box-shadow(
+      rgba($colour1, 1) 0 0 10px,
+      rgba($colour1, 1) 0 0 10px,
+      rgba($colour1, 1) 0 0 10px,
+      rgba($colour1, 1) 0 0 10px
+    );
+    text-decoration: none;
+  }
+}
+
 @mixin animation ($name, $duration,
       $timing-function:linear,
       $delay:0,
